# waypoint

./: CMakeLists.txt  package.xml  setup.py
scripts/: generator.py  output.txt
waypoint_generator/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
waypoint_generator/waypoint_generator/: generator.py
waypoint_meta/: CHANGELOG.rst  CMakeLists.txt  package.xml
waypoint_touring/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
waypoint_touring/data/: example.yaml
waypoint_touring/launch/: run.launch.xml
waypoint_touring/scripts/: tour.py
waypoint_touring/src/waypoint_touring/: utils.py
waypoint_touring/waypoint_touring/: tour.py  utils.py
