<?xml version="1.0"?>
<package>
  <name>waypoint_generator</name>
  <version>0.0.1</version>
  <description>Generates waypoint yaml file</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waypoint_generator</url>
  <url type="bugtracker">https://github.com/jihoonl/waypoint/issues</url>
  <url type="repository">https://github.com/jihoonl/waypoint</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
