<?xml version="1.0"?>
<package>
  <name>waypoint_meta</name>
  <version>0.0.1</version>
  <description>Waypoint Meta package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waypoint_meta</url>
  <url type="bugtracker">https://github.com/jihoonl/waypoint/issues</url>
  <url type="repository">https://github.com/jihoonl/waypoint</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>waypoint_generator</run_depend>
  <run_depend>waypoint_touring</run_depend>

</package>
