<?xml version="1.0"?>
<package>
  <name>waypoint_touring</name>
  <version>0.0.1</version>
  <description>Tours around the waypoints</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waypoint_touring</url>
  <url type="bugtracker">https://github.com/jihoonl/waypoint/issues</url>
  <url type="repository">https://github.com/jihoonl/waypoint</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
